# mif-rs

./: .gitleaks.toml  .trivyignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  SUPPORT.md  audit.toml  clippy.toml  deny.toml  justfile  lefthook.yml  osv-scanner.toml  trivy.yaml
.github/: RELEASE_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/instructions/: rust-code.instructions.md  tests.instructions.md
.github/prompts/: add-error-variant.prompt.md  new-module.prompt.md  write-tests.prompt.md
.github/skills/release/: SKILL.md
.github/workflows/: _diag.yml  admin-delete-orphaned-packages.yml  admin-set-package-visibility.yml  adr-validation.yml  adr-viewer.yml  benchmark-regression.yml  benchmark.yml  ci-checks.yml  ci-coverage.yml  ci-test-matrix.yml  code-quality.yml  copilot-setup-steps.yml  daily-docs-review.lock.yml  dast.yml  deploy.yml  docker-hub.yml  docs-deploy.yml  docs-freshness.lock.yml  fuzz-testing.yml  mutation-testing.yml  nightly.yml  package-homebrew.yml  pipeline.yml  publish.yml  quality-gates.yml  release-docker.yml  release.yml  secrets-scan.yml  security-audit.yml  spell-check.yml  stale.yml
.vex/: openvex.json
crates/mif-cli/: Cargo.toml  README.md
crates/mif-cli/src/: main.rs
crates/mif-cli/tests/: exit_codes.rs
crates/mif-core/: Cargo.toml  README.md
crates/mif-core/src/: concept.rs  entity.rs  lib.rs  ontology.rs
crates/mif-embed/: Cargo.toml  README.md
crates/mif-embed/src/: lib.rs
crates/mif-frontmatter/: Cargo.toml  README.md
crates/mif-frontmatter/src/: lib.rs
crates/mif-mcp/: Cargo.toml  README.md
crates/mif-mcp/src/: main.rs
crates/mif-ontology/: Cargo.toml  README.md
crates/mif-ontology/src/: confidence.rs  entity_type.rs  lib.rs
crates/mif-problem/: Cargo.toml  README.md
crates/mif-problem/src/: lib.rs
crates/mif-rh/: Cargo.toml  README.md
crates/mif-rh-cli/: Cargo.toml  README.md
crates/mif-rh-cli/src/: main.rs
crates/mif-rh-cli/tests/: bin_parity.rs
crates/mif-rh-cli/tests/common/: mod.rs
crates/mif-rh-mcp/: Cargo.toml  README.md
crates/mif-rh-mcp/src/: main.rs
crates/mif-rh/src/: author.rs  calibrate.rs  catalog.rs  config.rs  error.rs  finding.rs  harness_assert_graph.rs  harness_citation_integrity.rs  harness_concordance.rs  harness_corpus.rs  harness_falsify.rs  harness_graph.rs  harness_import.rs  harness_index.rs  harness_markdown.rs  harness_membership.rs  harness_ontology_registry.rs  harness_project.rs  harness_reconcile.rs  harness_relationship_targets.rs  harness_release.rs  harness_render.rs  harness_shippable_typing.rs  harness_synthesize.rs  harness_toggle.rs  harness_topic_metadata.rs  harness_validate_concordance.rs  harness_wrap.rs  index.rs  lib.rs  lock.rs  ontology_pack.rs  queue.rs  resolve.rs  review.rs  suggest.rs  vendor.rs
crates/mif-rh/tests/: parity.rs  search_eval.rs
crates/mif-schema/: Cargo.toml  README.md
crates/mif-schema/src/: lib.rs
crates/mif-store/: Cargo.toml  README.md
crates/mif-store/src/: lib.rs
docs/: DEPLOYMENT.md  README.md
docs/adr/: 0001-use-architectural-decision-records.md  0002-documentation-directory-structure.md  0003-virtual-cargo-workspace.md  0004-libraries-never-depend-on-binaries.md  0005-per-crate-thiserror-error-enums.md  0006-vendor-json-schema-at-compile-time.md  0007-generic-frontmatter-passthrough.md  0008-hand-written-core-types-not-codegen.md  0009-pedantic-clippy-lint-groups.md  0010-release-profile-panic-abort.md  0011-ban-openssl-and-atty.md  0012-cargo-chef-docker-layer-caching.md  0013-chainguard-glibc-dynamic-container-base.md  0014-ghcr-package-visibility-manual-process.md  0015-local-embeddings-sqlite-vector-store.md  0016-lefthook-ci-parity-git-hooks.md  0017-rfc9457-error-uri-hosted-on-pages.md  0018-rustdoc-and-starlight-unified-pages-deployment.md  0019-mif-rh-crates-in-mif-rs-workspace.md  0020-mif-rh-mcp-stdio-only-transport.md  README.md
docs/benchmarks/: M2-review-performance.md
docs/distribution/: ALTERNATIVE-REGISTRIES.md  DOCKER-REGISTRIES.md  PACKAGE-MANAGERS.md
docs/references/errors/: index.md
docs/references/errors/artifact-not-publishable/: v1.md
docs/references/errors/calibration-invalid/: v1.md
docs/references/errors/catalog-missing/: v1.md
docs/references/errors/changelog-anchor-missing/: v1.md
docs/references/errors/config-malformed/: v1.md
docs/references/errors/config-missing/: v1.md
docs/references/errors/corrupt-dimension/: v1.md
docs/references/errors/dimension-too-large/: v1.md
docs/references/errors/direct-binding-invalid/: v1.md
docs/references/errors/document-not-found/: v1.md
docs/references/errors/empty-source-content/: v1.md
docs/references/errors/entity-type-schema-invalid/: v1.md
docs/references/errors/field-json-conversion-failure/: v1.md
docs/references/errors/field-not-a-string/: v1.md
docs/references/errors/field-yaml-conversion-failure/: v1.md
docs/references/errors/finding-invalid-json/: v1.md
docs/references/errors/finding-io/: v1.md
docs/references/errors/frontmatter-not-a-mapping/: v1.md
docs/references/errors/frontmatter-yaml-serialize-failure/: v1.md
docs/references/errors/git-command-failed/: v1.md
docs/references/errors/hub-client-init-failure/: v1.md
docs/references/errors/index-failure/: v1.md
docs/references/errors/index-pin-mismatch/: v1.md
docs/references/errors/inference-failure/: v1.md
docs/references/errors/invalid-concordance/: v1.md
docs/runbooks/: CI-TROUBLESHOOTING.md  DEPENDENCY-UPDATES.md  RELEASING.md  SECURITY-RESPONSE.md
docs/security/: ATTESTED-DELIVERY.md  SIGNED-RELEASES.md
docs/template/: CI-WORKFLOWS.md
docs/testing/: PROPERTY-BASED-TESTING.md
docs/ux/: MAN-PAGES.md  SHELL-COMPLETIONS.md
docs/workflows/: CODE-QUALITY.md  CONTAINER-SCAN.md  COVERAGE.md  SBOM.md  SECRETS-SCAN.md  SPELL-CHECK.md
site/: astro.config.mjs  package-lock.json  package.json
site/scripts/: generate-docs-pages.mjs
site/src/: content.config.ts
(+87 files in other folders)
