[package]
name = "rust_template"
version = "0.1.1"
edition = "2024"
rust-version = "1.92"
description = "A Rust template crate with modern tooling and best practices"
license = "MIT"
authors = ["Your Name <you@example.com>"]
repository = "https://github.com/attested-delivery/rust-template"
homepage = "https://github.com/attested-delivery/rust-template"
documentation = "https://docs.rs/rust_template"
readme = "README.md"
keywords = ["template", "rust", "example"]
categories = ["development-tools"]
# Gates EXTERNAL publication only. This single switch disables crates.io
# publishing, the container image push, and Homebrew tap updates (the
# workflows read it via `cargo metadata` at runtime) — and cargo itself
# refuses `cargo publish` while it is set. It does NOT gate GitHub Releases:
# a pushed tag always produces an attested GitHub Release (binaries + SBOM +
# source snapshot), because a release is a tag primitive, not a publish.
# DELETE this line in a real project to arm the crates.io / container /
# Homebrew channels.
publish = false

[lib]
name = "rust_template"
path = "crates/lib.rs"

[[bin]]
name = "rust_template"
path = "crates/main.rs"

[[bench]]
name = "benchmarks"
harness = false

[dependencies]
# Core dependencies
thiserror = "2.0.18"

# Serialization — powers the RFC 9457 problem+json error envelope (crates/problem.rs)
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

# Async runtime (uncomment if needed)
# tokio = { version = "1.0", features = ["full"] }

# Logging (uncomment if needed)
# tracing = "0.1"
# tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
# Testing
proptest = "1.11.0"
test-case = "3.3.1"

# Benchmarking (criterion; default features off to keep the dep tree lean
# and supply-chain surface small — see benches/benchmarks.rs)
criterion = { version = "0.8.2", default-features = false }

# Async testing (uncomment if using tokio)
# tokio-test = "0.4"

[profile.dev]
# Faster compile times during development
debug = 1
opt-level = 0

[profile.release]
# Optimize for size and speed
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.release-debug]
inherits = "release"
debug = true
strip = false

[lints.rust]
# Enable additional warnings
unsafe_code = "forbid"
missing_docs = "warn"
rust_2024_compatibility = { level = "warn", priority = -1 }

[lints.clippy]
# Deny all warnings in CI
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Specific lints to deny
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"

# Allow in certain contexts (can be overridden per-module)
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
redundant_pub_crate = "allow"

[features]
default = []
# Add feature flags here
# full = ["feature1", "feature2"]
