[workspace]
resolver = "3"
members = [
    "crates/mif-core",
    "crates/mif-schema",
    "crates/mif-ontology",
    "crates/mif-cli",
    "crates/mif-mcp",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
license = "MIT"
repository = "https://github.com/modeled-information-format/mif-rs"
homepage = "https://mif-spec.dev"

[workspace.dependencies]
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
jsonschema = { version = "0.46.9", default-features = false }
clap = { version = "4.6.1", features = ["derive"] }
rmcp = "2.1.0"
tempfile = "3.27.0"

[workspace.dependencies.mif-core]
path = "crates/mif-core"
version = "0.1.0"

[workspace.dependencies.mif-schema]
path = "crates/mif-schema"
version = "0.1.0"

[workspace.dependencies.mif-ontology]
path = "crates/mif-ontology"
version = "0.1.0"

[profile.dev]
# Faster compile times during development
debug = 1
opt-level = 0

[profile.release]
# Optimize for size and speed
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.release-debug]
inherits = "release"
debug = true
strip = false

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
rust_2024_compatibility = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Specific lints to deny
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"

# Allow in certain contexts (can be overridden per-crate)
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
redundant_pub_crate = "allow"
# Inherent to a dependency graph pulling in multiple substantial third-party
# crates (jsonschema, rmcp, tokio); not a code-quality signal about this
# workspace's own code.
multiple_crate_versions = "allow"
