[workspace]
resolver = "3"
members = [
    "crates/mif-core",
    "crates/mif-schema",
    "crates/mif-ontology",
    "crates/mif-problem",
    "crates/mif-frontmatter",
    "crates/mif-embed",
    "crates/mif-store",
    "crates/mif-cli",
    "crates/mif-mcp",
    "crates/mif-rh",
    "crates/mif-rh-cli",
    "crates/mif-rh-mcp",
]

[workspace.package]
version = "0.6.1"
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/modeled-information-format/mif-rs"
homepage = "https://mif-spec.dev"

[workspace.dependencies]
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", features = ["preserve_order"] }
jsonschema = { version = "0.46.9", default-features = false }
clap = { version = "4.6.1", features = ["derive"] }
rmcp = "2.1.0"
tempfile = "3.27.0"
serde_norway = "0.9.42"
candle-core = "0.11.0"
candle-nn = "0.11.0"
candle-transformers = "0.11.0"
tokenizers = { version = "0.23.1", default-features = false, features = ["progressbar", "fancy-regex"] }
hf-hub = { version = "0.5.0", default-features = false, features = ["ureq"] }
dirs = "6.0.0"
rusqlite = { version = "0.40.1", features = ["bundled"] }
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
# Already present transitively (tokenizers' "fancy-regex" feature); used
# directly by mif-rh for markdown-render lookaround (autolink/deglob), which
# Rust's standard `regex` crate deliberately doesn't support.
fancy-regex = "0.18.0"
# Stale-PID liveness check for mif-rh's review lock, without raw signal calls
# (this workspace forbids unsafe_code workspace-wide). Previously exact-pinned
# on the belief that sysinfo >=0.38 required a newer Rust than this
# workspace's MSRV; verified false (mif-rs#56) — no MSRV or transitive
# constraint requires an exact pin, so this now allows 0.38.x patch updates.
sysinfo = { version = "0.38.4", default-features = false, features = ["system"] }
# Discovery-pattern content matching for mif-rh (the direct equivalent of
# rht's bash `[[ =~ ]]` regex fallback classifier).
regex = "1.12.4"
# sha256 verification for on-demand ontology vendoring (mif-rh's `vendor`
# module, the engine cutover of rht's fetch-ontology.sh). Pure-Rust, no
# unsafe, MIT/Apache-2.0.
sha2 = "0.10.9"
# HTTP(S) fetch of the canonical ontology registry index/files, for the same
# vendoring path. rustls-backed (no openssl); already pulled transitively by
# hf-hub's own "ureq" feature, so this is not a new transitive dependency,
# only a new direct one.
ureq = "3.3.0"

[workspace.dependencies.mif-core]
path = "crates/mif-core"
version = "0.6.0"

[workspace.dependencies.mif-schema]
path = "crates/mif-schema"
version = "0.6.0"

[workspace.dependencies.mif-ontology]
path = "crates/mif-ontology"
version = "0.6.0"

[workspace.dependencies.mif-problem]
path = "crates/mif-problem"
version = "0.6.0"

[workspace.dependencies.mif-frontmatter]
path = "crates/mif-frontmatter"
version = "0.6.0"

[workspace.dependencies.mif-embed]
path = "crates/mif-embed"
version = "0.6.0"

[workspace.dependencies.mif-store]
path = "crates/mif-store"
version = "0.6.0"

[workspace.dependencies.mif-rh]
path = "crates/mif-rh"
version = "0.6.0"

[profile.dev]
# Faster compile times during development
debug = 1
opt-level = 0

[profile.release]
# Optimize for size and speed
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.release-debug]
inherits = "release"
debug = true
strip = false

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
rust_2024_compatibility = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Specific lints to deny
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"

# Allow in certain contexts (can be overridden per-crate)
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
redundant_pub_crate = "allow"
# Inherent to a dependency graph pulling in multiple substantial third-party
# crates (jsonschema, rmcp, tokio); not a code-quality signal about this
# workspace's own code.
multiple_crate_versions = "allow"
