[package]
name = "mif-mcp"
description = "MCP server for the MIF (Modeled Information Format) ecosystem"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["mif", "mcp"]
categories = ["command-line-utilities"]
publish = false

[[bin]]
name = "mif-mcp"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
mif-schema.workspace = true
mif-ontology.workspace = true
rmcp = { version = "2.1.0", features = ["server", "transport-io"] }
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "io-std"] }
anyhow = "1.0.103"

[dev-dependencies]
tempfile.workspace = true
