[package]
name = "mif-problem"
description = "RFC 9457 Problem Details envelopes for the MIF (Modeled Information Format) ecosystem"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["mif", "error-handling", "rfc9457"]
categories = ["data-structures"]

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
thiserror.workspace = true
