[package]
name = "mif-schema"
description = "JSON Schema validation for the MIF (Modeled Information Format) ecosystem"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["mif", "json-schema", "validation"]
categories = ["data-structures", "encoding"]
publish = false

[lints]
workspace = true

[dependencies]
mif-core.workspace = true
jsonschema.workspace = true
serde_json.workspace = true
thiserror.workspace = true
