[package]
name = "mif-store"
description = "SQLite vector store for document embeddings in the MIF (Modeled Information Format) ecosystem"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["mif", "sqlite", "vector-store"]
categories = ["data-structures"]

[lints]
workspace = true

[dependencies]
mif-problem.workspace = true
thiserror.workspace = true
rusqlite.workspace = true

[dev-dependencies]
tempfile.workspace = true
